# Chat

./: git-test.cpp
charClient/: CMakeLists.txt
charClient/builder/: CMakeCache.txt  Makefile  chatClient  cmake_install.cmake
charClient/header/: chatClient.h
charClient/src/: chatClient.cpp  main.cpp
chatServer/: CMakeLists.txt
chatServer/builder/: CMakeCache.txt  Makefile  chatServer  cmake_install.cmake
chatServer/head/: chatServer.h
chatServer/src/: chatServer.cpp  main.cpp
